# termOS

./: .clangd  .gitignore  .tokeignore  CMakeLists.txt  Cargo.toml  README.md  ROADMAP.md  rust-toolchain.toml
.cargo/: config.toml
bootloader/: CMakeLists.txt  Cargo.toml
bootloader/.cargo/: config.toml
bootloader/cmake/: x86_64-uefi.toolchain.cmake
bootloader/src/: main.c  main.rs
bootloader/src/uefi/: crt_aarch64.c  crt_riscv64.c  crt_x86_64.c  stdio.c  stdlib.c  string.c  uefi.h
common/: bootinfo.h  hot_header.h
initramfs/: test.txt  test1.txt
kernel/: CMakeLists.txt  Cargo.toml  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/data/: cats.h  font8x16.c  font8x16.h  logo.h
kernel/inc/: types.h
kernel/inc/Data/: VGAFont.h  cats.h  logo.h
kernel/inc/FS/: CPIO.h  VFS.h
kernel/inc/IO/: IOConsole.h  IOGraphics.h  IOKeyboard.h  IOSerial.h  IOTimer.h
kernel/inc/KSH/: KSHBuiltins.h  KSHDebug.h  KSHEntry.h
kernel/inc/MM/: Heap.h
kernel/inc/OS/: OSPanic.h  OSScheduler.h  OSSpinlock.h
kernel/inc/OS/Exec/: HOTLoader.h  OSLoader.h
kernel/inc/OS/Services/: OSServiceIO.h  OSServiceMemory.h  OSServiceProcess.h
kernel/inc/VM/: Heap.h  PMM.h  VMM.h
kernel/inc/arch/x86_64/: GDT.h  IDT.h  IO.h  OSCPU.h  PIC.h  cpuinfo.h  gdt.h  idt.h  io.h  pic.h  syscall.h
kernel/inc/core/: hot.h  loader.h  math.h  panic.h  rand.h  scheduler.h  splash.h  string.h  userspace.h
kernel/inc/drivers/: console.h  font.h  keyboard.h  serial.h  shitgui.h  timer.h
kernel/inc/fs/: cpio.h  vfs.h
kernel/inc/lib/: Math.h  Rand.h  Splash.h  String.h
kernel/inc/mm/: heap.h  memory.h  pmm.h  vmm.h
kernel/inc/shell/: builtins.h  dbgcmd.h  kfetch.h  ksh.h
kernel/inc/syscalls/: io.h  mem.h  proc.h
kernel/include/: console.h  font.h  gdt.h  idt.h  io.h  keyboard.h  kfetch.h  math.h  memory.h  panic.h  pic.h  pmm.h  rand.h  serial.h  shitgui.h  types.h  vmm.h
kernel/src/: build.rs  entry.asm  io.rs  kmain.c  kmain.cpp  macros.rs  main.rs  panic.rs
kernel/src/FS/: CPIO.c  VFS.c
kernel/src/IO/: IOConsole.c  IOGraphics.c  IOKeyboard.c  IOSerial.c  IOTimer.c
kernel/src/KSH/: KSHBuiltins.c  KSHDebug.c  KSHEntry.c
kernel/src/OS/: OSPanic.c  OSScheduler.c  OSSpinlock.c
kernel/src/OS/Exec/: HOTLoader.c  OSLoader.c
kernel/src/OS/Services/: OSServiceIO.c  OSServiceMemory.c  OSServiceProcess.c
kernel/src/VM/: Heap.c  PMM.c  VMM.c
kernel/src/arch/: gdt.rs  interrupts.asm  interrupts.rs  mod.rs
kernel/src/arch/x86_64/: GDT.c  IDT.c  OSCPU.c  PIC.c  cpuinfo.c  entry.asm  gdt.c  gdt.cpp  gdt.rs  idt.c  idt.cpp  idt.rs  interrupts.asm  interrupts.c  interrupts.cpp  interrupts.rs  io.rs  linker.ld  mod.rs  pic.cpp  syscall.asm  syscall.c
kernel/src/asm/: entry.asm  interrupts.asm
kernel/src/boot/: mod.rs
kernel/src/core/: hot.c  loader.c  panic.c  panic.cpp  rand.c  rand.cpp  scheduler.c  splash.cpp  string.c  string.cpp  userspace.c
kernel/src/drivers/: console.c  console.cpp  keyboard.c  mod.rs  serial.c  serial.rs  shitgui.c  shitgui.cpp  timer.c
kernel/src/fs/: cpio.c  vfs.c
kernel/src/lib/: Rand.c  Splash.c  String.c
kernel/src/mm/: bitmap.rs  heap.c  heap.cpp  memory.c  memory.cpp  pmm.c  pmm.cpp  pmm.rs  vmm.c  vmm.cpp  vmm.rs
kernel/src/modules/: console.c  gdt.c  idt.c  interrupts.c  io.c  keyboard.c  kfetch.c  memory.c  panic.c  pic.c  pmm.c  rand.c  serial.c  shitgui.c  vmm.c
kernel/src/shell/: builtins.c  builtins.cpp  dbgcmd.c  dbgcmd.cpp  kfetch.c  ksh.c  ksh.cpp
kernel/src/syscalls/: io.c  mem.c  proc.c
kernel/src/system/: mod.rs  panic.rs
tools/elf2hot/: Cargo.toml
tools/elf2hot/src/: main.rs
tools/img2c/: img2c.py  logo.h
userspace/: CMakeLists.txt
userspace/debug/: CMakeLists.txt
userspace/debug/src/: main.c
userspace/init/: CMakeLists.txt  linker.ld
userspace/init/src/: crt0.asm  entry.asm  main.c
userspace/libobjc/: CMakeLists.txt
userspace/libobjc/inc/: HOTObject.h
userspace/libobjc/src/: HOTObject.m  msgSend.asm  runtime.c
userspace/libterm/: CMakeLists.txt
userspace/libterm/inc/: Console.h  Memory.h  Process.h  String.h  Types.h  malloc.h  process.h  stdio.h  string.h  termOS.h  types.h
userspace/libterm/linker/: common.ld  objc.ld
userspace/libterm/src/: Console.c  Memory.c  OSServices.asm  ObjCRuntimeEntry.asm  Process.c  RuntimeEntry.asm  String.c  crt0.asm  malloc.c  process.c  stdio.c  string.c  syscalls.asm
userspace/termosh/: CMakeLists.txt
userspace/termosh/inc/: handlers.h  parser.h  tokens.h
userspace/termosh/src/: main.c
userspace/termosh/src/handlers/: misc.c  spawn.c
userspace/termosh/src/modules/: parser.c
userspace/testOBJC/: CMakeLists.txt
userspace/testOBJC/src/: main.m
xtask/src/: main.rs
